gitops-archive/manifests/sourcebot/install.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sourcebot
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sourcebot
  namespace: sourcebot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sourcebot
  template:
    metadata:
      labels:
        app: sourcebot
    spec:
      containers:
        - name: sourcebot
          image: ghcr.io/sourcebot-dev/sourcebot:v5.0.2
          imagePullPolicy: Always
          resources:
            requests:
              memory: "250Mi"
              cpu: "100m"
            limits:
              memory: "500Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: config
              mountPath: /data/config.json
              subPath: config.json
      volumes:
        - name: config
          configMap:
            name: sourcebot-config
---
apiVersion: v1
kind: Service
metadata:
  name: sourcebot
  namespace: sourcebot
spec:
  selector:
    app: sourcebot
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sourcebot-internal
  namespace: sourcebot
  annotations:
    kubernetes.io/ingress.class: traefik-external
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sourcebot.local.timmybtech.com`)
      kind: Rule
      services:
        - name: sourcebot
          port: 3000
  tls:
    secretName: local-timmybtech-com-tls
